objects/BCImporter__x.object
<CustomObject>
    <description>BCImporter</description>
    <externalDataSource>BCImporter</externalDataSource>
    <externalName>BCImporter</externalName>
    <fields>
        <fullName>accountBalance__c</fullName>
        <externalDeveloperName>accountBalance</externalDeveloperName>
        <label>accountBalance</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountPK__c</fullName>
        <description>accountPK</description>
        <externalDeveloperName>accountPK</externalDeveloperName>
        <label>accountPK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <externalDeveloperName>city</externalDeveloperName>
        <label>city</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>class__c</fullName>
        <description>class</description>
        <externalDeveloperName>class</externalDeveloperName>
        <label>class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>companyName__c</fullName>
        <externalDeveloperName>companyName</externalDeveloperName>
        <label>Company Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <description>country</description>
        <externalDeveloperName>country</externalDeveloperName>
        <label>country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdDate__c</fullName>
        <description>createdDate</description>
        <externalDeveloperName>createdDate</externalDeveloperName>
        <label>createdDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <description>description</description>
        <externalDeveloperName>description</externalDeveloperName>
        <label>description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <description>email</description>
        <externalDeveloperName>email</externalDeveloperName>
        <label>email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modifiedDate__c</fullName>
        <description>modifiedDate</description>
        <externalDeveloperName>modifiedDate</externalDeveloperName>
        <label>modifiedDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>selfLink__c</fullName>
        <description>selfLink</description>
        <externalDeveloperName>selfLink</externalDeveloperName>
        <label>selfLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>street__c</fullName>
        <description>street</description>
        <externalDeveloperName>street</externalDeveloperName>
        <label>street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zip__c</fullName>
        <description>zip</description>
        <externalDeveloperName>zip</externalDeveloperName>
        <label>zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BCImporter</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>BCImporter</pluralLabel>
</CustomObject>